--- a/deployments/docker-compose/grafana/provisioning/dashboards/dashboard-provider.yml
+++ b/deployments/docker-compose/grafana/provisioning/dashboards/dashboard-provider.yml
@@ -1,13 +1,12 @@
 apiVersion: 1
 
 providers:
-  - name: 'Default Dashboards' # You can name this provider as you like
+  - name: 'default'
     orgId: 1
-    folder: '' # Dashboards will appear in the General folder in Grafana
+    folder: ''
     type: file
-    disableDeletion: false # Set to true to prevent users from deleting provisioned dashboards
-    editable: true # Set to false to prevent users from editing provisioned dashboards
+    disableDeletion: false
+    editable: true
     options:
-      path: /etc/grafana/provisioning/dashboards # Path inside the Grafana container where dashboard JSON files are located
-      # This path will be mapped from a host directory in your docker-compose.yml,
-      # for example: ./grafana/dashboards:/etc/grafana/provisioning/dashboards
+      path: /etc/grafana/provisioning/dashboards # Path where JSON dashboards are in docker-compose
+      # For K8s, we might use /var/lib/grafana/dashboards or similar
